--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,12 +14,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.1.3
   firebase_core: ^1.7.0
+  firebase_storage: ^10.1.0
   flutter:
     sdk: flutter
   flutter_bloc: ^7.3.1
   flutter_conditional_rendering: ^2.0.0
   fluttertoast: ^8.0.8
   hexcolor: ^2.0.5
+  image_picker: ^0.8.4+4
   shared_preferences: ^2.0.8
 
 dev_dependencies:
