--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.1.3
   firebase_core: ^1.7.0
+  firebase_messaging: ^11.1.0
   firebase_storage: ^10.1.0
   flutter:
     sdk: flutter
